# RPO2024

lab1/fclient/: local.properties
lab1/fclient/app/: build.gradle
lab1/fclient/app/src/main/: AndroidManifest.xml
lab10/: package-lock.json  package.json
lab10/backend/front/: package-lock.json  package.json
lab10/backend/front/src/: App.js  index.js
lab10/backend/front/src/components/: Home.jsx  NavigationBarClass.jsx
lab10/backend/front/src/services/: BackendService.jsx
lab10/backend/front/src/utils/: Utils.jsx
lab11/backend/front/src/: App.css  App.js
lab11/backend/front/src/components/: Alert.jsx  CountryListComponent.jsx  NavigationBarClass.jsx  SideBar.jsx
lab11/backend/front/src/services/: BackendService.jsx
lab11/backend/src/main/resources/: application.properties
lab12/backend/front/: package-lock.json  package.json
lab12/backend/front/src/: App.css  App.js
lab12/backend/front/src/components/: Alert.jsx  Another_Home.jsx  ArtistComponent.jsx  ArtistListComponent.jsx  CountryComponent.jsx  CountryListComponent.jsx  (+12 more)
lab2/fclient/app/: build.gradle
lab2/fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
lab2/fclient/gradle/wrapper/: gradle-wrapper.properties
lab3/fclient/: settings.gradle
lab4/backend/: pom.xml
lab4/fclient/app/: build.gradle
lab5/backend/: pom.xml
lab6/backend/: pom.xml
lab7/backend/: pom.xml
lab8/backend/: pom.xml
lab8/backend/front/: package-lock.json  package.json
lab8/backend/front/src/: App.js
lab9/backend/front/: package-lock.json  package.json
lab9/backend/front/src/: App.js
(+80 files in other folders)
